--- a/tasks/config-RedHat.yml
+++ b/tasks/config-RedHat.yml
@@ -7,6 +7,15 @@
   notify:
     - restart filebeat
 
+- name: Create Filebeat module configs
+  template:
+    src: "templates/module.yml.j2"
+    dest: "{{filebeat_modules_dir}}/{{ item.key }}.yml"
+  when: filebeat_create_config
+  with_dict: "{{ filebeat_module_config }}"
+  notify:
+    - restart filebeat
+
 - name: Enable Filebeat to start at boot
   systemd:
     name: filebeat
