--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,5 @@ install:
   - pip install docker-py
 script:
   - molecule test
+notifications:
+    webhooks: https://galaxy.ansible.com/api/v1/notifications/
