--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ services:
 before_install:
   - sudo apt-get -qq update
 install:
-  - pip install molecule
-  - pip install docker-py
+  - pip install -r requirements.txt
 script:
   - molecule test
 notifications:
