--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -1,9 +1,10 @@
 ---
 name: Python package
 
-"on": pull_request
-  branches:
-    - master
+"on":
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
